2007-06-26  Vincent Untz  <vuntz@gnome.org>

	* window-list.c: (destroy_tasklist): the last two listeners were
	removed

2007-06-26  Vincent Untz  <vuntz@gnome.org>

	Get rid of minimum/maximum size for the window list.

	* Makefile.am: add LIBPANEL_APPLET_CFLAGS to make compilation work. It
	seems some pkgconfig file changed, and we didn't have the bonobo
	headers anymore...
	* window-list.c: (applet_change_orient): updated
	(minimum_size_changed): killed
	(maximum_size_changed): killed
	(setup_gconf): updated
	(window_list_applet_fill): updated
	(spin_minimum_size_changed): killed
	(spin_maximum_size_changed): killed
	(setup_dialog): updated
	* window-list.glade: updated
	* window-list.schemas.in: mark the relevant keys as deprecated.

2007-06-26  Vincent Untz  <vuntz@gnome.org>

	Fix window list button size.
	Applet part of bug #310809.

	* window-list.c: (applet_size_request): simplify a lot, since we don't
	care about the minimum width/height anymore. Also, the base for the
	size hints is 0 now, it's not the width of the child size request
	since the width of the child size request is the best size for the
	child, not the minimum size for it. Basically, size hints + size
	requests are just weird. You generally want to use one or another, not
	a mix like what was done before.

2007-06-18  Vincent Untz  <vuntz@gnome.org>

	* window-list.c: (applet_realized): wnck_tasklist_set_screen() is
	useless now
	(window_list_applet_fill): no need to call wnck_screen_force_update()
	* workspace-switcher.c: (applet_realized): wnck_pager_set_screen() is
	useless now, set the screen of the pager
	(applet_scroll): code cleanup 
	(workspace_switcher_applet_fill): no need to call
	wnck_screen_force_update()
	Fix crash bug #350671.

==================== 2.19.4 ====================

2007-06-14  Vincent Untz  <vuntz@gnome.org>

	* wncklet.c: (wncklet_set_tooltip): migrate to GtkTooltip

==================== 2.19.3 ====================

2007-05-25  Vincent Untz  <vuntz@gnome.org>
