@@ -1,3 +1,10 @@
+2007-07-01  Vincent Untz  <vuntz@gnome.org>
+
+	* showdesktop.c: (update_button_display): use
+	gtk_widget_set_tooltip_text()
+	* window-menu.c: (window_menu_applet_fill): dittp
+	* wncklet.[ch]: kill wncklet_set_tooltip()
+
 2007-06-26  Vincent Untz  <vuntz@gnome.org>
 
 	* window-list.c: (destroy_tasklist): the last two listeners were
